0.9
 - WARNING: Default for "change direction" changed to "D"
 - WARNING: Configuration syntax changed a little, now tables
            are used everywhere.
	    ThrottleInvert became Invert["Throttle"], etc.
 - Removed *: from scripts calls as per dev documents
 - Added warning if Simple controls are detected
 - Added an option "S" to switch to speed limit only
 - Added an option to sync controls on start of the sim
 - New option for Axes, Step: set the control over time,
   not immediately. Now even using Notches the ControlValue
   will go through immediate values before reaching the setting.
 - Added an option to disable all "Havner's config" mods.

0.8
 - WARNING: Havner's configs changed (I got more physical throttles now)
 - Sunflower indicator removed, it was just obscuring the view
 - Toggleable font outline for better visibility (see readme)
 - Acceleration implemented on the C++ side, works properly when
   driving after changing sides of the loco
 - Significat changes in the overlay shortcuts and cmd line:
   - Split into 2 groups, main and steam
   - Higher granularity in what you want to display
   - Colors changed a little
   - See the readme for current shortcuts and cmd line
 - Configs for J50, 2F Dock Tank and 3F Jinty by MeshTools
 - Config for GWR Small Prairies by VictoryWorks
 - Configs for Cologne Koblenz locos
 - Configs for BR103 and BR111 by vRailroads
 - Damper axis removed, it made little sense
 - FireboxDoor, ExhaustSteam and LiveSteam axes (also for FEF-3)

0.7
 - Support for FEF-3 HUD version, sorry, forgot previously.
 - Support for Bulleid Q1, see the steamers section in the readme.
 - Support for 14xx/48xx/58xx, see the steamers section in the readme.
 - Support for BR442 Talent 2, BR420, Class 50.
 - Stoking, ExhaustWater, LiveWater added to axes controls
 - Further modifications in a way the overlay is configured
   (similar to the joystick part, autodetections first, then locos).